--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             </a>
         </p>
         <hr>
-        <h4>Story & Code by Alex</h4>
+        <h4>Story & Code by Alex<br></h4>
+        <p>Dev note 3/8/22: <br>My heart goes out to the people of Ukraine currently
+            fighting to defend their country in a scale of war we've not seen since WWII.
+            <br>These are unprecedented times.<br>
+        </p>
+        <h4>Слава Україні! &#127482;&#127462; Героям слава!&#127482;&#127462;</h4>
     </body>
 </html>
