--- a/intro.html
+++ b/intro.html
@@ -12,9 +12,9 @@
         <div class='center background-gradient'> 
             <img src = "pics/street.jpg" width=480/>
         </div>
-        <p class='merriweather-font bold'>Kiev, Ukraine.  April, 2022.</p>
-        <p class='indent'>You and your spouse have been trapped inside Kiev for a month now under Russian occupation.
-            Kiev's denizens are struggling, and you aren't unique from this situation.
+        <p class='merriweather-font bold'>April, 2022.</p>
+        <p class='indent'>You and your spouse have been trapped inside Rharkov for a month now under enemy occupation.
+            Rharkov's denizens are struggling, and you aren't unique from this situation.
             You're running low on food, need medicine for your cold, and in order to be able to leave
             the occupation zone: you must find passports from somewhere to attempt to escape...
         </p>
