updated apartment file

--- a/apartments.html
+++ b/apartments.html
@@ -12,7 +12,7 @@
             <img src="pics/apartmentExterior.jpg" width=480/>
         </span>
         <p class="indent">You walk down what used to be a bustling part of town, now its ownership flips sides
-            depending if there's insurgents or Russian soldiers...
+            depending if there's insurgents or PRP soldiers...
         </p>
         <h4>What do you do?</h4>
         <ul>
