fixed emoji ecode

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>War Empathy</title>
+        <meta charset="utf-8">
         <link rel="icon" href="pics/icon.png"/>
         <link href='styles/styles.css' rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&family=Merriweather:wght@300&display=swap" rel="stylesheet">     
